--- a/config.json
+++ b/config.json
@@ -1,18 +1,18 @@
 {
-  "name": "Aluracord - Matrix (peas)",
+  "name": "Aluracord - Healthineers",
   "theme": {
     "colors": {
       "primary": {
-        "050": "#E3F9E5",
-        "100": "#C1EAC5",
-        "200": "#A3D9A5",
-        "300": "#7BC47F",
-        "400": "#57AE5B",
-        "500": "#3F9142",
-        "600": "#2F8132",
-        "700": "#207227",
-        "800": "#0E5814",
-        "900": "#05400A"
+        "050": "#C3CBFE",
+        "100": "#AFB9FE",
+        "200": "#9BA8FD",
+        "300": "#8696FD",
+        "400": "#7285FD",
+        "500": "#5E73FD",
+        "600": "#445DFC",
+        "700": "#3650FC",
+        "800": "#223FFC",
+        "900": "#0E2EFB"
       },
       "neutrals": {
         "000": "#FFFFFF",
